<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Peppermint</string>
    <string name="topic_browse_fragment_title">Browse Topics</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="no_data_topic">No topics currently available. Try again later, or add some topics of your own.</string>
    <string name="no_data_name">No Data</string>
    <string name="hello_world">Hello world!</string>
    <string name="conversation_browse_fragment_title">Browse Conversations</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="registration_prompt">Tell us about yourself</string>
    <string name="registration_first_name_hint">First Name</string>
    <string name="registration_last_name_hint">Last Name</string>
    <string name="registration_submit">Submit</string>
    <string name="registration_invalid">First name and last name, please.</string>
    <string name="title_activity_conversation">ConversationActivity</string>
    <string name="no_conversations_message">No conversations yet. Start one by tapping \"Let\'s Talk\" when you see a topic you like.</string>
    <string name="send_message">Send</string>
    <string name="long_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="title_activity_initial_topics">InitialTopicsActivity</string>
    <string name="topic_prompt">Add some topics</string>
    <string name="topic_encouragement_1">What do you want to talk about?</string>
    <string name="submit_topic_button_text">Submit Topic</string>
    <string name="topic_done_button_text">Done</string>
    <string name="topic_entry_hint">Keep it concise yet provocative.</string>

</resources>
