<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="40dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.gradysimon.peppermint.RegisterActivity">
    <TextView
        android:id="@+id/prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="25dp"
        android:text="@string/registration_prompt"/>
    <EditText
        android:id="@+id/first_name_edittext"
        android:layout_below="@+id/prompt"
        android:layout_marginTop="20dp"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:hint="@string/registration_first_name_hint"/>
    <EditText
        android:id="@+id/last_name_edittext"
        android:layout_below="@id/first_name_edittext"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:hint="@string/registration_last_name_hint"/>
    <Button
        android:id="@+id/submit_button"
        android:layout_below="@id/last_name_edittext"
        android:layout_width="200dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/registration_submit"/>
</RelativeLayout>
