<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="40dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.gradysimon.peppermint.InitialTopicsActivity">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topic_prompt"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="25dp"/>

    <TextView
        android:id="@+id/encouragement_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/title_text"
        android:layout_centerHorizontal="true"
        android:text="@string/topic_encouragement_1"
        android:textSize="20dp"
        />
    
    <EditText
        android:id="@+id/topic_text_edditext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:lines="2"
        android:textSize="25dp"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/encouragement_text"
        android:hint="@string/topic_entry_hint"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topic_text_edditext"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/submit_topic_button_text"
            android:id="@+id/submit_topic_button"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.2"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/topic_done_button_text"
            android:enabled="false"
            android:id="@+id/done_button"/>
    </LinearLayout>

</RelativeLayout>
